# SafeBricks

./: .gitignore  Cargo.toml  Makefile  README.md  build_sgx_dpdk.sh  config.sh  examples.sh  run_dpdk.sh  run_sgx.sh  setupBuild.sh  setupDpdk.sh  setupDpdkCopy.sh
.cargo/: config
configs/: config_2core.toml  config_4core.toml  config_6core.toml
dpdkIO/: Cargo.toml
dpdkIO/.cargo/: config
dpdkIO/src/: main.rs
examples/: config.sh  config_1core.toml  config_2core.toml  config_3core.toml  measure_throughput.py  run_measure_throughput.sh
examples/dpi/: Cargo.toml
examples/dpi-hs/: Cargo.toml
examples/dpi-ipsec/: Cargo.toml
examples/dpi-ipsec-sha/: Cargo.toml
examples/echo-reply-v4/: Cargo.toml
examples/forward/: Cargo.toml
examples/ipv4or6/: Cargo.toml
examples/lpm/: Cargo.toml
examples/lpm-ipsec/: Cargo.toml
examples/lpm-ipsec-sha/: Cargo.toml
examples/macswap/: Cargo.toml
examples/maglev/: Cargo.toml
examples/monitoring/: Cargo.toml
examples/sctp/: Cargo.toml
examples/traversal/: Cargo.toml
examples/traversal-ng/: Cargo.toml
examples/traversal-ng/src/: main.rs  nf.rs
framework-inside/: Cargo.toml
framework-inside/src/: lib.rs
framework-outside/: Cargo.toml
framework-outside/src/: lib.rs
native/: pmd.c
native/include/: pmd.h
rust-sgx/aesm-client/: Cargo.toml
rust-sgx/enclave-runner/: Cargo.toml
rust-sgx/fortanix-sgx-tools/: Cargo.toml
rust-sgx/sgxs/: Cargo.toml
scripts/: bak-build.sh
sgx-runner/: Cargo.toml  config_1core.toml  config_2core.toml  config_3core.toml  config_5core.toml
sharedring/: Cargo.toml
(+18 files in other folders)
