[package]
name = "dpdkIO"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"

[dependencies]
pktpuller = {version = "0.3.0", path = "../framework-outside"}
sharedring = { version = "0.1.0", path = "../sharedring" }

nix = "=0.13"
byteorder = "=1.2"
libc = "=0.2"
core_affinity = "=0.5"
lazy_static = "=1.4"
ctrlc = { version = "=3.1.2", features = ["termination"] }
