[package]
name = "traversal-ng"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <williamofockham@gmail.com>"]
description = "Example: traversal auditing"
license = "..."
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
fnv = ">= 1.0"
lazy_static = ">= 1.3"
netbricks = { path = "../../framework-inside"}
time = "= 0.1"

[features]
default = []
print = []
